2018-05-25:
- Fixed bug introduced in version 1.2.0 that caused the calculation of particle area
  density in the profile summary to not exclude holes from the total area.
2018-05-24:
- Fixed a fatal bug introduced by migration to Python 3 that caused failure
  to process files if a log file was not already present.
- Fixed the "_csv_writer object has no 'close' attribute" bug, so csv files
  can now be saved again.
- file_io.read_file() again had started to trigger errors when encountering
  non-ASCII characters, probably since after the migration to Python 3. This
  has now been fixed, such that coordinate files are opened using
  OS/locale-specific encoding, with the 'surrogateescape' option to tolerate
  some decoding errors.
2018-04-20:
- Added Feret diameter to profile output.
- Minor bug fixes and code cleanup.
2018-04-19:
- Now works with Python 3 instead of Python 2.
2015-04-16:
- Bug fixes.
2015-01-14:
- Fixed Monte Carlo simulations that had been broken in a previous version.
- Monte Carlo simulation windows should now work as expected.
- Removed the strict localization option when using simulation window "profile +
  shell".
- Most functions in class ProfileData are now semiprivate.
- Further code cleanup.
- Various other small changes and bug fixes.
2014-11-11:
- A rather comprehensive code cleanup.
- Various other small changes and bug fixes.
- License changed to the MIT license.
2014-05-14:
- In the output files for random and grid points, output values were for the
  'real' point list rather than for the random or grid point lists. This has now
  been fixed.
- For Monte Carlo simulations, fixed a bug that caused simulated particles within
  profile holes to be accepted as valid when simulation window was set to
  "profile + shell".
- View file dialog is now properly destroyed when closed.
- PyExcelerator is again included in the Window binaries.
2014-01-24:
- Fixed a bug that caused a failure to execute when using the latest version
  of wxPython. 