@@ -1,3 +1,4 @@
+import itertools
 import os.path
 import time
 from .core import *
@@ -203,29 +204,21 @@ def save_output(profileli, opt):
             for n, li in enumerate([pro.__dict__[prefix + "distli"] for prefix in prefixli]):
                 cols[n].extend([m(e, pro.pixelwidth) for e in li])
         # transpose cols and append to table
-        table.extend(map(lambda *col: [e if e is not None else "" for e in col], *cols))
-        with file_io.FileWriter("interpoint.summary", opt) as f:
+        table.extend(list(itertools.zip_longest(*cols, fillvalue="")))
+        with file_io.FileWriter("interpoint.distances", opt) as f:
             f.writerows(table)
 
     def write_mc_dist_to_path():
-
-        def m_li(*_li):
-            return [m(x, pro.pixelwidth) for x in _li]
-
         if not opt.run_monte_carlo:
             return
         table = [["Run %d" % (n + 1) for n in range(0, opt.monte_carlo_runs)]]
         for pro in eval_proli:
-            table.extend(map(m_li, *[[p.dist_to_path for p in li['pli']]
-                                     for li in pro.mcli]))
-        with file_io.FileWriter("simulated.border.distance.summary", opt) as f:
+            table.extend(itertools.zip_longest(*[[m(p.dist_to_path, pro.pixelwidth)
+                                                  for p in li['pli']] for li in pro.mcli]))
+        with file_io.FileWriter("simulated.border.distances", opt) as f:
             f.writerows(table)
 
     def write_mc_ip_dists(dist_type):
-
-        def m_li(*_li):
-            return [m(x, pro.pixelwidth) for x in _li]
-
         if not (opt.run_monte_carlo and opt.determine_interpoint_dists):
             return
         for ip_type in [key for key, val in opt.interpoint_relations.items()
@@ -239,10 +232,11 @@ def save_output(profileli, opt):
                 short_dist_type = ''
             table = [["Run %d" % (n + 1) for n in range(0, opt.monte_carlo_runs)]]
             for pro in eval_proli:
-                table.extend(map(m_li,
-                                 *[p for li in pro.mcli
-                                   for p in li[ip_type]["%sdist" % short_dist_type]]))
-            with file_io.FileWriter("%s.interpoint.%s.distance.summary"
+                table.extend(itertools.zip_longest(*[m(p, pro.pixelwidth)
+                                                     for li in pro.mcli
+                                                     for p in li[ip_type]["%sdist"
+                                                                          % short_dist_type]]))
+            with file_io.FileWriter("%s.interpoint.%s.distances"
                                     % (ip_type.replace(" ", ""), dist_type), opt) as f:
                 f.writerows(table)
 
